Update main.css and index.html

--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
+  <title>Pretty Products</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="css/main.css">
   <link href="https://fonts.googleapis.com/css2?family=Karma&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title></title>
 </head>
 <body>
 
@@ -17,50 +18,61 @@
           <h2>Crystal</h2>
           <p>Shiny, glowy and make great sounds.</p>
           <section class="button">
-            <img src="images/cart.svg" alt="images/cart.svg">
-            <p>Add to Cart</p>
+            <a class="cart" href="#" aria-label="Add to Cart">
+              <img src="images/cart.svg" alt="images/cart.svg"> Add to Cart</a>
+              <a href="#">
+                <img class="icons" src="images/favourite.svg" alt="Favourite"></a>
+              <a href="#">
+                <img class="icons" src="images/share.svg" alt="share"></a>
           </section>
-          <img src="images/favourite.svg" alt="Favourite">
-          <img src="images/share.svg" alt="share">
         </li>
       </div>
+
       <div class="diamond">
         <li>
           <img src="images/diamond.svg" alt="Vector Graphic Diamond">
           <h2>Diamond</h2>
           <p>Diamonds sparkle in all shapes, sizes and clarities.</p>
           <section class="button">
-            <img src="images/cart.svg" alt="images/cart.svg">
-            <p>Add to Cart</p>
+            <a class="cart" href="#" aria-label="Add to Cart">
+              <img src="images/cart.svg" alt="images/cart.svg"> Add to Cart</a>
+              <a href="#">
+                <img class="icons" src="images/favourite.svg" alt="Favourite"></a>
+              <a href="#">
+                <img class="icons" src="images/share.svg" alt="share"></a>
           </section>
-          <img src="images/favourite.svg" alt="Favourite">
-          <img src="images/share.svg" alt="share">
-        </li
+        </li>
       </div>
+
       <div class="gem">
         <li>
           <img src="images/gem.svg" alt="Vector Graphic Gem">
           <h2>Gem</h2>
           <p>Lots of bright, wonderful colours and shapes.</p>
           <section class="button">
-            <img src="images/cart.svg" alt="images/cart.svg">
-            <p>Add to Cart</p>
+            <a class="cart" href="#" aria-label="Add to Cart">
+              <img src="images/cart.svg" alt="images/cart.svg"> Add to Cart</a>
+              <a href="#">
+                <img class="icons" src="images/favourite.svg" alt="Favourite"></a>
+              <a href="#">
+                <img class="icons" src="images/share.svg" alt="share"></a>
           </section>
-          <img src="images/favourite.svg" alt="Favourite">
-          <img src="images/share.svg" alt="share">
         </li>
       </div>
+
       <div class="jewel">
         <li>
           <img src="images/jewel.svg" alt="Vector Graphic Jewel">
           <h2>Jewel</h2>
           <p>The root word of jewellery, so ya know it’s gorg’</p>
           <section class="button">
-            <img src="images/cart.svg" alt="images/cart.svg">
-            <p>Add to Cart</p>
+            <a class="cart" href="#" aria-label="Add to Cart">
+              <img src="images/cart.svg" alt="images/cart.svg"> Add to Cart</a>
+            <a href="#">
+              <img class="icons" src="images/favourite.svg" alt="Favourite"></a>
+            <a href="#">
+              <img class="icons" src="images/share.svg" alt="share"></a>
           </section>
-          <img src="images/favourite.svg" alt="Favourite">
-          <img src="images/share.svg" alt="share">
         </li>
       </div>
 
@@ -70,11 +82,13 @@
           <h2>Pearl</h2>
           <p>Beautifully pearlescent circles created inside living creatures</p>
           <section class="button">
-            <img src="images/cart.svg" alt="images/cart.svg">
-            <p>Add to Cart</p>
+            <a class="cart" href="#" aria-label="Add to Cart">
+              <img src="images/cart.svg" alt="images/cart.svg"> Add to Cart</a>
+              <a href="#">
+                <img class="icons" src="images/favourite.svg" alt="Favourite"></a>
+              <a href="#">
+                <img class="icons" src="images/share.svg" alt="share"></a>
           </section>
-          <img src="images/favourite.svg" alt="Favourite">
-          <img src="images/share.svg" alt="share">
         </li>
       </div>
 
@@ -84,11 +98,13 @@
           <h2>Rock</h2>
           <p>Who doesn't love a good, plain ol' rock now & then.</p>
           <section class="button">
-            <img src="images/cart.svg" alt="images/cart.svg">
-            <p>Add to Cart</p>
+            <a class="cart" href="#" aria-label="Add to Cart">
+              <img src="images/cart.svg" alt="images/cart.svg"> Add to Cart</a>
+              <a href="#">
+                <img class="icons" src="images/favourite.svg" alt="Favourite"></a>
+              <a href="#">
+                <img class="icons" src="images/share.svg" alt="share"></a>
           </section>
-          <img src="images/favourite.svg" alt="Favourite">
-          <img src="images/share.svg" alt="share">
         </li>
       </div>
 
@@ -98,11 +114,13 @@
           <h2>Ruby</h2>
           <p>If you love dazzling red-this is the one!</p>
           <section class="button">
-            <img src="images/cart.svg" alt="images/cart.svg">
-            <p>Add to Cart</p>
+            <a class="cart" href="#" aria-label="Add to Cart">
+              <img src="images/cart.svg" alt="images/cart.svg"> Add to Cart</a>
+              <a href="#">
+                <img class="icons" src="images/favourite.svg" alt="Favourite"></a>
+              <a href="#">
+                <img class="icons" src="images/share.svg" alt="share"></a>
           </section>
-          <img src="images/favourite.svg" alt="Favourite">
-          <img src="images/share.svg" alt="share">
         </li>
       </div>
 
@@ -112,11 +130,13 @@
           <h2>Sapphire</h2>
           <p>Blue for you. Blue is blue. Yay, blue.</p>
           <section class="button">
-            <img src="images/cart.svg" alt="images/cart.svg">
-            <p>Add to Cart</p>
+            <a class="cart" href="#" aria-label="Add to Cart">
+              <img src="images/cart.svg" alt="images/cart.svg"> Add to Cart</a>
+              <a href="#">
+                <img class="icons" src="images/favourite.svg" alt="Favourite"></a>
+              <a href="#">
+                <img class="icons" src="images/share.svg" alt="share"></a>
           </section>
-          <img src="images/favourite.svg" alt="Favourite">
-          <img src="images/share.svg" alt="share">
         </li>
       </div>
     </ol>
